# badge_designer

./: 39c3.toml  Cargo.toml  Dioxus.toml  README.md  package.json  test.toml
.github/workflows/: deploy.yml
assets/: main.css  tailwind.css
src/: main.rs
